# Signal-Review

./: .gitignore  README.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  main.py  mypy.ini  pyproject.toml  ruff.toml
backend/src/: __init__.py  config.py  main.py
backend/src/exceptions/: __init__.py  custom.py  handlers.py
backend/src/models/: __init__.py  requests.py  responses.py
backend/src/routers/: github_webhooks.py  payments.py  review.py  users.py
backend/src/routes/: admin.py  payments.py
backend/src/services/: __init__.py  github.py  github_app.py  review_flow.py  reviewer.py  signal_filter.py
backend/tests/: conftest.py
backend/tests/integration/: test_github_webhooks_router.py  test_review_router.py
backend/tests/unit/: test_config.py  test_github.py  test_github_app.py  test_reviewer.py  test_signal_filter.py
docs/: DEMO.md  PROMPTS.md  VIDEO_SCRIPT.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts  review.ts
frontend/src/components/: Badge.tsx  ErrorMessage.tsx  IssueCard.tsx  LoadingSpinner.tsx  ReviewForm.tsx  ReviewResult.tsx  SummaryCard.tsx
frontend/src/hooks/: useReview.ts
frontend/src/types/: review.ts
